feat: improve UI

--- a/src/style.css
+++ b/src/style.css
@@ -47,7 +47,7 @@ html {
   font-style: normal;
   line-height: 1.5;
   font-weight: 400;
-  font-size: 0.75rem;
+  font-size: 14px;
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
